manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: apidocumentation
spec:
  selector:
    matchLabels:
      app: apidocumentationapp
  replicas: 1
  template:
    metadata:
      labels:
        app: apidocumentationapp
    spec:
      containers:
        - name: apidocumentationapp
          image: timelogregistry.azurecr.io/apidocumentationapp:latest
          resources:
            requests:
              memory: 128Mi
              cpu: 200m
            limits:
              memory: 2400Mi
              cpu: 400m
          ports:
          - containerPort: 80
