manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: apidocumentationapp
spec:
    type: ClusterIP
    ports:
    - port: 80
    selector:
        app: apidocumentationapp
