manifests/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-timelog-com-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.timelog.com
        - docs.timelog.com
      secretName: tls-secret
  rules:
    - host: api.timelog.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: apidocumentationapp
                port:
                  number: 80
    - host: docs.timelog.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: apidocumentationapp
                port:
                  number: 80
